# focus-mediabtn

./: .embed.toml  Cargo.toml  build.rs
.cargo/: config
linker-scripts/: memory-map.x  memory-standalone.x  memory.x
src/: main — копия.rs2  main.rs
