[package]
name = "focus-mediabtn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = { version = "0.7.4", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.1"
panic-halt = "0.2.0"
cortex-m-semihosting = { version = "0.5.0", optional = true }
panic-semihosting = { version = "0.6.0", optional = true }
unwrap-infallible = "0.1.5"
cortex-m-rtic = "1.1.3"
embedded-hal = "0.2.7"
nb = "1.0.0"
fugit = "0.3.6"
rtt-target = "0.5.0"
bxcan = "0.7.0"
heapless = "0.7.17"

[dependencies.stm32f1xx-hal]
version = "0.10.0"
features = ["rt", "stm32f103", "medium", "rtic", "has-can"]

[features]
semihosting = ["panic-semihosting", "cortex-m-semihosting"]

[profile.dev]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
# lto = true # better optimizations
lto = false
opt-level = 2

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
opt-level = "s"
strip = "debuginfo"
